[gd_scene load_steps=7 format=2]

[ext_resource path="res://art/temp/PauseWindow/item_rect.png" type="Texture" id=1]
[ext_resource path="res://global/PauseWindow/BackPack/Inventory.gd" type="Script" id=2]
[ext_resource path="res://global/ReferenceList/ItemSprite.tres" type="SpriteFrames" id=3]
[ext_resource path="res://art/fonts/STXINWEI.TTF" type="DynamicFontData" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 50, 50 )

[sub_resource type="DynamicFont" id=2]
size = 24
outline_size = 1
font_data = ExtResource( 4 )

[node name="Inventory" type="Area2D"]
position = Vector2( -50, -100 )
z_index = 1
collision_layer = 524288
collision_mask = 0
script = ExtResource( 2 )

[node name="Border" type="Sprite" parent="."]
scale = Vector2( 1.266, 1.22 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = ExtResource( 3 )

[node name="ItemNumber" type="Label" parent="."]
margin_left = -50.0
margin_top = 20.0
margin_right = 45.0
margin_bottom = 50.0
custom_fonts/font = SubResource( 2 )
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="mouse_entered" from="." to="." method="_on_Inventory_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Inventory_mouse_exited"]
